# lab12345678

./: CMakeLists.txt  function.cpp  function.h  lab88.cpp  main.cpp  mainlab8_2.cpp
